bk_ida/gccida/g2/add_data_member_location_attribute
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_data_member_location_attribute/src/dwarf2out.c:9032:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_data_member_location_attribute/src/dwarf2out.c:9066:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8430, "field_byte_offset"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_data_member_location_attribute/src/dwarf2out.c:9093:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_data_member_location_attribute/src/dwarf2out.c:9140:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8599, "add_data_member_location_attribute"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/add_data_member_location_attribute/src/obj/dwarf2out.o] Error 1
